--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,1 +1,10 @@
-<h1>Welcome {{title}}!</h1>
+<app-nav-bar></app-nav-bar>
+
+<div class="container">
+    <h1>List</h1>
+    <ul>
+      <li class="list-unstyled" *ngFor="let product of products">
+          {{product.name}}
+      </li>
+    </ul>
+</div>
