--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -1,7 +1,7 @@
 <header class="text-gray-700 bg-white border-t border-b body-font">
-  <div class="container flex flex-col flex-wrap p-5 mx-auto md:items-center md:flex-row ">
+  <div class="container flex flex-col flex-wrap mx-auto md:items-center md:flex-row ">
     <a class="flex items-center w-20 mb-4 font-medium text-gray-900 title-font md:mb-0">
-      <img src="assets/images/logo.png" alt="">
+      <img src="../../../assets/images/logo.png" alt="">
     </a>
     <a href="#" class="mr-5 text-3xl font-semibold text-gray-600">Elson</a>
     <nav class="flex flex-wrap items-center justify-center text-base">
