--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -29,7 +29,8 @@
               <ul class="divide-y divide-gray-300">
                 <li class="p-4 hover:bg-gray-50 cursor-pointer"
                     *ngFor="let brand of brands"
-                    [class.bg-blue-600]="brand.id === this.brandIdSelected"
+                    [class.bg-blue-600]="brand.id === this.shopParams.brandId"
+                    [class.rounded-lg]="brand.id === this.shopParams.brandId"
                     [value]="brand.id"
                     (click)="onBrandSelected(brand.id)"
                 >
@@ -50,7 +51,8 @@
               <ul class="divide-y divide-gray-300">
                 <li class="p-4 hover:bg-gray-50 cursor-pointer"
                     *ngFor="let type of types"
-                    [class.bg-blue-600]="type.id === this.typeIdSelected"
+                    [class.bg-blue-600]="type.id === this.shopParams.typeId"
+                    [class.rounded-lg]="type.id === this.shopParams.typeId"
                     [value]="type.id"
                     (click)="onTypeSelected(type.id)"
                 >
@@ -64,25 +66,32 @@
     </div>
     <div class="col-span-10 ">
       <div class="grid grid-cols-12">
-        <div class="col-span-12 pt-2 relative text-gray-600 flex justify-between">
-          <div class="pl-4 py-3">Showing 10 of 16 results</div>
-          <div class="">
-            <input class="border-2 border-gray-300 bg-white h-10 px-5 pr-16 rounded-lg text-sm focus:outline-none"
-                   type="search" name="search" placeholder="Search">
-            <button type="submit"
-                    class=" p-2 border-2 border-gray-30 bg-white h-10 w-8 rounded-lg text-sm focus:outline-none">
-              <svg class="text-gray-600 h-4 w-4 fill-current" xmlns="http://www.w3.org/2000/svg"
-                   version="1.1" id="Capa_1" x="0px" y="0px"
-                   viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;" xml:space="preserve"
-                   width="512px" height="512px">
-            <path
-              d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z"/>
-          </svg>
-            </button>
-            <button type="submit"
-                    class=" mr-4 border-2 border-gray-30 bg-white h-10 w-16 rounded-lg text-sm focus:outline-none">
-              Reset
-            </button>
+        <div class="col-span-12 pt-2 relative text-gray-600">
+          <div class="flex justify-between">
+            <app-pagination-header
+              [totalCount]="totalCount"
+              [pageSize]="this.shopParams.pageSize"
+              [pageNumber]="this.shopParams.pageNumber"
+            ></app-pagination-header>
+            <div>
+              <input (keyup.enter)="onSearch()" class="border-2 border-gray-300 bg-white h-10 px-5 pr-16 rounded-lg text-sm focus:outline-none"
+                     type="text" name="search" #search placeholder="Search">
+              <button (click)="onSearch()"
+                      class=" p-2 border-2 border-gray-30 bg-white h-10 w-8 rounded-lg text-sm focus:outline-none">
+                <svg class="text-gray-600 h-4 w-4 fill-current" xmlns="http://www.w3.org/2000/svg"
+                     version="1.1" id="Capa_1" x="0px" y="0px"
+                     viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;" xml:space="preserve"
+                     width="512px" height="512px">
+                <path
+                d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z"/>
+                </svg>
+              </button>
+              <button
+                (click)="onReset()"
+                class=" mr-4 border-2 border-gray-30 bg-white h-10 w-16 rounded-lg text-sm focus:outline-none">
+                Reset
+              </button>
+            </div>
           </div>
         </div>
         <section class="col-span-12 text-gray-700 body-font">
@@ -93,6 +102,12 @@
               </div>
             </div>
           </div>
+          <app-pagination *ngIf="totalCount>0"
+            [totalItems]="this.totalCount"
+            [itemsPerPage]="this.shopParams.pageSize"
+            (PageChange)="onPageChanged($event)"
+            >
+          </app-pagination>
         </section>
       </div>
     </div>
