--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-nav-bar></app-nav-bar>
 
 <div class="container mx-auto px-8">
-    <app-shop></app-shop>
+    <router-outlet></router-outlet>
 </div>
