--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -7,12 +7,18 @@
         {{product.price | currency}}
         <span class="ml-1 text-base text-gray-600">/per item</span>
       </h2>
-      <h2 class="mb-3 text-lg font-semibold text-gray-700 lg:text-2xl title-font"> {{product.name}}
+      <h2 routerLink="/shop/{{product.id}}"
+          class="mb-3 text-lg font-semibold text-gray-700 lg:text-2xl title-font"> {{product.name}}
       </h2>
       <p class="mb-4 text-base leading-relaxed description">{{product.description}}</p>
       <button
-        class="w-full px-8 py-2 font-semibold text-white transition duration-500 ease-in-out transform rounded-lg shadow-xl bg-gradient-to-r from-blue-700 hover:from-blue-600 to-blue-600 hover:to-blue-700 focus:shadow-outline focus:outline-none">
-        Button
+        class="w-1/2 px-8 py-2 font-semibold text-white transition duration-500 ease-in-out transform rounded-lg shadow-xl bg-gradient-to-r from-blue-700 hover:from-blue-600 to-blue-600 hover:to-blue-700 focus:shadow-outline focus:outline-none">
+        Add to cart
+      </button>
+      <button
+        routerLink="/shop/{{product.id}}"
+        class="w-1/3 ml-10 py-2 font-semibold text-white transition duration-500 ease-in-out transform rounded-lg shadow-xl bg-gradient-to-r from-blue-700 hover:from-blue-600 to-blue-600 hover:to-blue-700 focus:shadow-outline focus:outline-none">
+        View
       </button>
     </div>
   </div>
