feat: added error handling components

--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -8,6 +8,7 @@
       <a [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="mr-5 text-xl font-semibold text-gray-600 lg:ml-24 hover:text-gray-800">Home</a>
       <a routerLink="/shop" routerLinkActive="active" class="mr-5 text-xl font-semibold text-gray-600 hover:text-gray-800">Shop</a>
       <a [routerLink]="[]" class="mr-5 text-xl font-semibold text-gray-600 hover:text-gray-800">Contact</a>
+      <a routerLink="/test-error" routerLinkActive="active" class="mr-5 text-xl font-semibold text-gray-600 hover:text-gray-800">Errors</a>
     </nav>
 
     <div class="ml-auto align-items-center">
