--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,9 @@
+<ngx-spinner template = "<img src='/assets/gif/loading.gif' />">
+</ngx-spinner>
+
 <app-nav-bar></app-nav-bar>
+<app-section-header></app-section-header>
+
 <div class="container mx-auto px-8">
     <router-outlet></router-outlet>
 </div>
