--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -1,68 +1,70 @@
 <div class="container">
   <div class="grid grid-cols-12 grid-flow-col">
     <div class="col-span-2">
-      <div class="flex justify-center">
-        <div class="container">
-          <div class="flex justify-center p-4">
-            <h1 class="text-xl text-blue-500">Sort</h1>
-          </div>
-          <div class="flex justify-center">
-            <div class="bg-white shadow-xl rounded-lg h-8 text-xl w-full">
-              <select class=" bg-white rounded-lg h-8 text-xl w-full" (change)="onSortSelected($event.target.value)">
-                <option *ngFor="let sort of sortOptions"
-                        [value]="sort.value"
-                >
-                  {{sort.name}}
-                </option>
-              </select>
+      <ng-container *ngIf="types && brands">
+        <div class="flex justify-center">
+          <div class="container">
+            <div class="flex justify-center p-4">
+              <h1 class="text-xl text-blue-500">Sort</h1>
+            </div>
+            <div class="flex justify-center">
+              <div class="bg-white shadow-xl rounded-lg h-8 text-xl w-full">
+                <select class=" bg-white rounded-lg h-8 text-xl w-full" (change)="onSortSelected($event.target.value)">
+                  <option *ngFor="let sort of sortOptions"
+                          [value]="sort.value"
+                  >
+                    {{sort.name}}
+                  </option>
+                </select>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="flex justify-center">
-        <div class="container">
-          <div class="flex justify-center p-4">
-            <h1 class="text-xl text-blue-500">Brands</h1>
-          </div>
-          <div class="flex justify-center">
-            <div class="bg-white shadow-xl rounded-lg w-full">
-              <ul class="divide-y divide-gray-300">
-                <li class="p-4 hover:bg-gray-50 cursor-pointer"
-                    *ngFor="let brand of brands"
-                    [class.bg-blue-600]="brand.id === this.shopParams.brandId"
-                    [class.rounded-lg]="brand.id === this.shopParams.brandId"
-                    [value]="brand.id"
-                    (click)="onBrandSelected(brand.id)"
-                >
-                  {{brand.name}}
-                </li>
-              </ul>
+        <div class="flex justify-center">
+          <div class="container">
+            <div class="flex justify-center p-4">
+              <h1 class="text-xl text-blue-500">Brands</h1>
+            </div>
+            <div class="flex justify-center">
+              <div class="bg-white shadow-xl rounded-lg w-full">
+                <ul class="divide-y divide-gray-300">
+                  <li class="p-4 hover:bg-gray-50 cursor-pointer"
+                      *ngFor="let brand of brands"
+                      [class.bg-blue-600]="brand.id === this.shopParams.brandId"
+                      [class.rounded-lg]="brand.id === this.shopParams.brandId"
+                      [value]="brand.id"
+                      (click)="onBrandSelected(brand.id)"
+                  >
+                    {{brand.name}}
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="flex justify-center">
-        <div class="container">
-          <div class="flex justify-center p-4">
-            <h1 class="text-xl text-blue-500">Types</h1>
-          </div>
-          <div class="flex justify-center">
-            <div class="bg-white shadow-xl rounded-lg w-full">
-              <ul class="divide-y divide-gray-300">
-                <li class="p-4 hover:bg-gray-50 cursor-pointer"
-                    *ngFor="let type of types"
-                    [class.bg-blue-600]="type.id === this.shopParams.typeId"
-                    [class.rounded-lg]="type.id === this.shopParams.typeId"
-                    [value]="type.id"
-                    (click)="onTypeSelected(type.id)"
-                >
-                  {{type.name}}
-                </li>
-              </ul>
+        <div class="flex justify-center">
+          <div class="container">
+            <div class="flex justify-center p-4">
+              <h1 class="text-xl text-blue-500">Types</h1>
+            </div>
+            <div class="flex justify-center">
+              <div class="bg-white shadow-xl rounded-lg w-full">
+                <ul class="divide-y divide-gray-300">
+                  <li class="p-4 hover:bg-gray-50 cursor-pointer"
+                      *ngFor="let type of types"
+                      [class.bg-blue-600]="type.id === this.shopParams.typeId"
+                      [class.rounded-lg]="type.id === this.shopParams.typeId"
+                      [value]="type.id"
+                      (click)="onTypeSelected(type.id)"
+                  >
+                    {{type.name}}
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
-      </div>
+      </ng-container>
     </div>
     <div class="col-span-10 ">
       <div class="grid grid-cols-12">
@@ -73,8 +75,9 @@
               [pageSize]="this.shopParams.pageSize"
               [pageNumber]="this.shopParams.pageNumber"
             ></app-pagination-header>
-            <div>
-              <input (keyup.enter)="onSearch()" class="border-2 border-gray-300 bg-white h-10 px-5 pr-16 rounded-lg text-sm focus:outline-none"
+            <div *ngIf="products">
+              <input (keyup.enter)="onSearch()"
+                     class="border-2 border-gray-300 bg-white h-10 px-5 pr-16 rounded-lg text-sm focus:outline-none"
                      type="text" name="search" #search placeholder="Search">
               <button (click)="onSearch()"
                       class=" p-2 border-2 border-gray-30 bg-white h-10 w-8 rounded-lg text-sm focus:outline-none">
@@ -83,7 +86,7 @@
                      viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;" xml:space="preserve"
                      width="512px" height="512px">
                 <path
-                d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z"/>
+                  d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z"/>
                 </svg>
               </button>
               <button
@@ -103,10 +106,10 @@
             </div>
           </div>
           <app-pagination *ngIf="totalCount>0"
-            [totalItems]="this.totalCount"
-            [itemsPerPage]="this.shopParams.pageSize"
-            (PageChange)="onPageChanged($event)"
-            >
+                          [totalItems]="this.totalCount"
+                          [itemsPerPage]="this.shopParams.pageSize"
+                          (PageChange)="onPageChanged($event)"
+          >
           </app-pagination>
         </section>
       </div>
