--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -2,3 +2,15 @@
 html {
 
 }
+.xng-breadcrumb-root {
+  padding: 8px;
+  display: inline;
+  border-radius: 0;
+}
+label.xng-breadcrumb-trail{
+  margin-bottom: 0;
+  color: #2563EB;
+}
+.xng-breadcrumb-seperator {
+  padding: 0 0;
+}
