--- a/client/src/app/shop/product-details/product-details.component.html
+++ b/client/src/app/shop/product-details/product-details.component.html
@@ -93,16 +93,19 @@
             <span class="title-font font-medium text-2xl text-gray-900">{{product.price | currency}}</span>
             <div class="ml-24 custom-number-input h-10 w-32">
               <div class="flex flex-row h-10 w-full rounded-lg relative bg-transparent">
-                <button data-action="decrement" class=" bg-gray-300 text-gray-600 hover:text-gray-700 hover:bg-gray-400 h-full w-20 rounded-l cursor-pointer outline-none">
+                <button (click)="decrementQuantity()" class=" bg-gray-300 text-gray-600 hover:text-gray-700 hover:bg-gray-400 h-full w-20 rounded-l cursor-pointer outline-none">
                   <span class="m-auto text-2xl font-thin">−</span>
                 </button>
-                <input type="number" class="outline-none focus:outline-none text-center w-full bg-gray-300 font-semibold text-md hover:text-black focus:text-black  md:text-basecursor-default flex items-center text-gray-700  outline-none" name="custom-input-number" value="0">
-                <button data-action="increment" class="bg-gray-300 text-gray-600 hover:text-gray-700 hover:bg-gray-400 h-full w-20 rounded-r cursor-pointer">
+                <div  class="outline-none focus:outline-none text-center w-1/4 text-center bg-gray-300 font-semibold text-md hover:text-black focus:text-black  md:text-basecursor-default flex items-center text-gray-700  outline-none">
+                  {{quantity}}
+                </div>
+                <button (click)="incrementQuantity()" class="bg-gray-300 text-gray-600 hover:text-gray-700 hover:bg-gray-400 h-full w-20 rounded-r cursor-pointer">
                   <span class="m-auto text-2xl font-thin">+</span>
                 </button>
               </div>
             </div>
             <button
+              (click)="addItemToBasket()"
               class="flex ml-auto text-white bg-blue-500 border-0 py-2 px-6 focus:outline-none hover:bg-blue-600 rounded">
               Add to Cart
             </button>
