feat: add home page

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,4 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 html {
+background-color: #0C1014;
+}
 
+
+@font-face {
+  font-family: 'KontoraBlack';
+  src: url('assets/fonts/KontoraBlack.otf') format('opentype');
 }
