--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,1 +1,29 @@
-<p>home works!</p>
+<section class="text-gray-600 body-font relative">
+  <div class="px-5 py-24 mx-auto">
+    <div class="flex flex-col text-center w-full mb-12">
+      <h1 class="home-text sm:text-9xl text-3xl  mb-4 ">Team chat</h1>
+      <p class="reimagined home-text lg:w-2/3 sm:text-9xl  text-3xl mx-auto leading-relaxed text-base">Reimaginned.</p>
+      <p class="mt-10 sm:text-xl text-xs ">Cloud-based collaboration and communities chat reimagined that's <br> free,secure,and work on both your dekstop and phone</p>
+    </div>
+    <button class="button_home flex mx-auto text-white rounded-full bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Button</button>
+  </div>
+  <div class="banner px-5 py-24 mx-auto rounded-3xl ">
+    <div class="flex flex-col w-full mb-12">
+      <div class="container flex flex-wrap px-5  mx-auto items-center">
+        <div class="md:w-1/2 md:pr-12 md:py-8 mb-10 md:mb-0 pb-10 ">
+          <h1 class="sm:text-6xl home-text text-2xl font-medium title-font mb-2 text-gray-900">Pitchfork Kickstarter <br> Taxidermy</h1>
+          <p class="leading-relaxed text-base">Locavore cardigan small batch roof party blue bottle blog meggings sartorial jean shorts kickstarter migas sriracha church-key synth succulents. Actually taiyaki neutra, distillery gastropub pok pok ugh.</p>
+          <a class="text-indigo-500 inline-flex items-center mt-4">Subscribe us for more
+          </a>
+          <div class=" mt-3  flex  flex-row  flex-wrap">
+            <input type="text" class=" text-gray-600 p-2  rounded-l-lg" placeholder="john@mail.com"/>
+            <button class=" p-2    bg-indigo-400  rounded-r-lg  text-white hover: bg-indigo-300" type="button">Subscribe</button>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
