--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -16,18 +16,45 @@
         <i class="fa-shopping-cart fa fa-2x m-3"></i>
         <div *ngIf="(basket$ | async) as basket" class="absolute top-3 right-3 -mt-4 -mr-4 px-2 bg-red-500 rounded-full">{{basket.items.length}}</div>
       </button>
-      <button
-        class="text-lg inline-flex px-8 py-3 font-semibold text-white transition duration-500 ease-in-out transform rounded-lg bg-gradient-to-r from-blue-700 hover:from-blue-600 to-blue-600 hover:to-blue-700 focus:ring focus:outline-none">
-        Login
-      </button>
-      <button
-        class="text-lg items-center px-8 py-3 mt-4 ml-5 font-semibold text-black transition duration-500 ease-in-out transform bg-white border rounded-lg lg:inline-flex lg:mt-px hover:border-black0 hover:bg-black hover:text-white focus:ring focus:outline-none">
-        Sign Up
-        <svg class="hidden lg:block" fill="none" stroke="currentColor" stroke-linecap="round"
-             stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
-          <path d="M5 12h14M12 5l7 7-7 7"></path>
-        </svg>
-      </button>
+      <ng-container *ngIf="(currentUser$ | async) === null">
+        <button routerLink="account/login"
+                class="text-lg inline-flex px-8 py-3 font-semibold text-white transition duration-500 ease-in-out transform rounded-lg bg-gradient-to-r from-blue-700 hover:from-blue-600 to-blue-600 hover:to-blue-700 focus:ring focus:outline-none">
+          Login
+        </button>
+        <button routerLink="account/register"
+                class="text-lg items-center px-8 py-3 mt-4 ml-5 font-semibold text-black transition duration-500 ease-in-out transform bg-white border rounded-lg lg:inline-flex lg:mt-px hover:border-black0 hover:bg-black hover:text-white focus:ring focus:outline-none">
+          Sign Up
+          <svg class="hidden lg:block" fill="none" stroke="currentColor" stroke-linecap="round"
+               stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
+            <path d="M5 12h14M12 5l7 7-7 7"></path>
+          </svg>
+        </button>
+      </ng-container>
+      <ng-container *ngIf="currentUser$ | async">
+        <div class="relative">
+          <input type="checkbox" id="sortbox" class="hidden absolute">
+          <label for="sortbox" class="flex items-center space-x-1 cursor-pointer">
+            <span class="text-lg"><h1>Welcome {{(currentUser$ | async).displayName}}</h1></span>
+            <svg class="h-4 w-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+            </svg>
+          </label>
+
+          <div id="sortboxmenu" class="absolute mt-1 right-1 top-full min-w-max shadow rounded opacity-0 bg-white border border-black transition delay-75 ease-in-out z-10">
+            <ul class="block text-right text-gray-900">
+              <li><a routerLink="/basket" class="block px-3 py-2 hover:bg-gray-200">
+                <i class="fa fa-shopping-cart">View Basket</i>
+              </a></li>
+              <li><a routerLink="/orders" class="block px-3 py-2 hover:bg-gray-200">
+                <i class="fa fa-history">View Orders</i>
+              </a></li>
+              <li><a (click)="logout()" class="block px-3 py-2 hover:bg-gray-200">
+                <i class="fa fa-sign-out">Logout</i>
+              </a></li>
+            </ul>
+          </div>
+        </div>
+      </ng-container>
     </div>
   </div>
 </header>
